--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <script src="../ass-danmaku/extension/danmaku/layout.js"></script>
   <script src="../ass-danmaku/extension/download/download.js"></script>
   <script src="./main.js"></script>
+  <script src="./ua.js"></script>
 
 </body>
 
