--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
   <script src="../ya-simple-scrollbar/ya-simple-scrollbar.js"></script>
   <script src="./browser_stub.js"></script>
+  <script src="../ass-danmaku/extension/lib/pbf@3.0.5/pbf.js"></script>
   <script src="../ass-danmaku/extension/font/font.js"></script>
   <script src="../ass-danmaku/extension/options/ext_options.js"></script>
   <script src="../ass-danmaku/extension/danmaku/parser.js"></script>
